<resources>
    <string name="app_name">fmao1-SizeBook</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_title">Alarm!</string>
    <string name="dialog_message">If you click "Yes", this item will be DELETE and will NOT be RECOVERED. Are you sure?</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="table_header_name">Name: </string>
    <string name="table_header_date">Date: </string>
    <string name="table_header_neck">Neck: </string>
    <string name="table_header_bust">Bust: </string>
    <string name="table_header_chest">Chest: </string>
    <string name="table_header_waist">Waist: </string>
    <string name="table_header_hip">Hip: </string>
    <string name="table_header_inseam">Inseam: </string>
    <string name="table_header_comment">Comment: </string>
    <string name="hint_name">Type NAME here</string>
    <string name="hint_comment">Type COMMENT here</string>
    <string name="title_activity_edit">EditActivity</string>
</resources>
