<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fengyi.fmao1_sizebook.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_margin_left"
        android:layout_marginRight="@dimen/card_margin_right"
        android:layout_marginTop="@dimen/card_margin_top"
        android:layout_marginBottom="@dimen/card_margin_bottom">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_left"
            android:layout_marginTop="@dimen/text_margin_top"
            android:layout_marginRight="@dimen/text_margin_right"
            android:layout_marginBottom="@dimen/text_margin_bottom">

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:id="@+id/text_detail_name"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_large"
                    android:layout_span="2"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_date"/>

                <TextView
                    android:id="@+id/text_detail_date"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_neck"/>

                <TextView
                    android:id="@+id/text_detail_neck"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_bust"/>

                <TextView
                    android:id="@+id/text_detail_bust"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_chest"/>

                <TextView
                    android:id="@+id/text_detail_chest"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_waist"/>

                <TextView
                    android:id="@+id/text_detail_waist"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_hip"/>

                <TextView
                    android:id="@+id/text_detail_hip"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_inseam"/>

                <TextView
                    android:id="@+id/text_detail_inseam"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/line_margin_top"
                android:layout_marginBottom="@dimen/line_margin_bottom">

                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/table_header_comment"/>

                <TextView
                    android:id="@+id/text_detail_comment"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
